fix padding on mobile devices

--- a/themes/hueman/source/css/_responsive.styl
+++ b/themes/hueman/source/css/_responsive.styl
@@ -160,7 +160,8 @@
                 .search-form-input
                     font-size: font-size
                     width: 90%
-    .main-body-inner
+    .main-body-inner,
+    .main-body-inner.home
         padding: 0px
         background: none
     #main
